# mls-tools

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  mls-tools.spec
examples/: INSTALL  Makefile  Makefile.am  Makefile.in  README  gdm  gdm-autologin  gdm-password  install.sh  mls-tools-example.fc  mls-tools-example.te  namespace.conf  newrole  uninstall-poly.sh  uninstall.sh
examples/firefox/: Makefile  Makefile.am  Makefile.in  install.sh  ml-firefox  ml-firefox.desktop  uninstall.sh
examples/gnome-terminal/: Makefile  Makefile.am  Makefile.in  gnome-terminal-disable-factory  gt.strace  install.sh  ml-terminal.desktop  uninstall.sh
examples/oo/: Makefile  Makefile.am  Makefile.in  install.sh  jcdx-nautilus.spec  ml-oo-calc  ml-oo-calc.desktop  ml-oo-draw  ml-oo-draw.desktop  ml-oo-impress  ml-oo-impress.desktop  ml-oo-writer  ml-oo-writer.desktop  uninstall.sh
ml-launch/: Makefile  Makefile.am  Makefile.in  check-dominance  get-file-level  label-dialog  ml-launch  ml-launch.1  ml_launch.fc  ml_launch.if  ml_launch.te
ml-launch/src/: Makefile  Makefile.am  Makefile.in  check_dominance.py  codeword.glade  context.py  dominance.py  error_dialog.py  get_file_level.py  label_dialog.patch  label_dialog.py  label_dialog_test.py  mcstrans.py  ml-launch  ml-launch.glade  ml-launch.py  ml_launch.py  polydir.py  selinux_login.py
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  en.gmo  en.po  ja.mo  ja.po  ko.mo  ko.po
